<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
              android:orientation="vertical"
            android:layout_height="match_parent" >
    <include layout="@layout/toolbar"/>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            tools:context=".activity.DetailActivity">

        <LinearLayout
                android:id="@+id/wrapperTeam"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/tv_homeTeam"
                        android:layout_width="match_parent"
                        android:text="@string/dummy_text"
                        android:gravity="center"
                        android:layout_below="@+id/iv_homeTeam"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/iv_homeTeam"
                        android:src="@mipmap/ic_launcher"

                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"/>


            </RelativeLayout>
            <RelativeLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_matchDate"
                        android:text="2018-10-28"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                        android:layout_below="@id/tv_matchDate"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_weight="1"
                            android:id="@+id/tv_homeScore"
                            android:text="0"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="22sp"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_vs"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:text="@string/VS"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_awayScore"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="0"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/iv_awayTeam"
                        android:src="@mipmap/ic_launcher"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"/>
                <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/tv_awayTeam"
                        android:layout_width="match_parent"
                        android:text="@string/dummy_text"
                        android:gravity="center"
                        android:layout_below="@+id/iv_awayTeam"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/detail_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone"/>
        <LinearLayout
                android:id="@+id/wrapper_match_detail"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeGoals"
                        android:layout_weight="1.25"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Goals"
                        android:layout_width="0dp"
                        android:text="@string/Goals"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayGoals"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.25"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeShots"
                        android:layout_weight="1.25"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Shots"
                        android:layout_width="0dp"
                        android:text="@string/Shots"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayShots"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:gravity="center"
                        android:layout_weight="1.25"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
            <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_Lineups"
                    android:text="@string/Lineups"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeGoalKeeper"
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_GoalKeeper"
                        android:layout_width="0dp"
                        android:text="@string/GoalKeeper"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayGoalKeeper"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeDefense"
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Defense"
                        android:layout_width="0dp"
                        android:text="@string/Defense"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayDefense"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeMidfield"
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Midfield"
                        android:layout_width="0dp"
                        android:text="@string/Midfield"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayMidfield"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeForward"
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Forward"
                        android:layout_width="0dp"
                        android:text="@string/Forward"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awayForward"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_homeSubstitutes"
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_Substitutes"
                        android:layout_width="0dp"
                        android:text="@string/Substitutes"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_awaySubstitutes"
                        android:layout_width="0dp"
                        android:text="@string/dummy_text"
                        android:layout_weight="1.1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>